--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,20 +33,23 @@
     <div class="row col-md-10">
         <h2>List of Registered Users</h2>
     </div>
-    <table class="table table-bordered table-hover">
+    <table class="table table-bordered table-hover" border="1">
         <thead class="table-dark">
             <tr>
-                <th>First Name</th>
-                <th>Last Name</th>
+		<th>ID</th>
                 <th>Email</th>
+		<th>First Name</th>
+                <th>Last Name</th>
             </tr>
         </thead>
         <tbody>
             <tr th:each = "user : ${users}">
+		<td th:text = "${user.id}"></td>
+		<td th:text = "${user.email}"></td>
                 <td th:text = "${user.firstName}"></td>
                 <td th:text = "${user.lastName}"></td>
-                <td th:text = "${user.email}"></td>
             </tr>
+    	    </c:forEach>
         </tbody>
     </table>
 </div>
