--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,7 +33,7 @@
     <div class="row col-md-10">
         <h2>List of Registered Users</h2>
     </div>
-    <table <!--class="table table-bordered table-hover"--> border="1">
+    <table class="table table-bordered table-hover" border="1">
         <thead class="table-dark">
             <tr>
 		<th>ID</th>
